--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "dist"
+  publish = "dist"
 
 [[redirects]]
-    from = '/*'
-    to = '/index.html'
-    status = 200
+  from = "/*"
+  to = "/index.html"
+  status = 200
